# ceno

./: Cargo.toml  script.sh
ceno_emul/src/: rv32im.rs
ceno_host/src/: lib.rs
ceno_host/tests/: test_elf.rs
ceno_rt/src/: syscalls.rs
ceno_zkvm/: Cargo.toml
ceno_zkvm/benches/: is_prime.rs  sorting.rs  tower_witness.rs
ceno_zkvm/examples/: is_prime.elf  riscv_opcodes.rs
ceno_zkvm/src/: e2e.rs  structs.rs  witness.rs
ceno_zkvm/src/instructions/riscv/: div.rs
ceno_zkvm/src/scheme/: prover.rs  utils.rs
ceno_zkvm/src/tables/ram/: ram_impl.rs
examples/: Cargo.toml
examples-builder/: build.rs
examples/examples/: bn254_curve_syscalls.rs  bn254_fptower_syscalls.rs  ceno_rt_regex.rs  ceno_rt_revm.rs  is_prime.rs  sorting.rs
gkr_iop/: Cargo.toml  sketch.md
gkr_iop/benches/: faster_keccak.rs  keccak_f.rs
gkr_iop/examples/: keccak_f.rs  multi_layer_logup.rs  theta.rs  xor.rs  xor3.rs
gkr_iop/src/: chip.rs  evaluation.rs  gkr.rs  lib.rs
gkr_iop/src/chip/: builder.rs
gkr_iop/src/gkr/: layer.rs  mock.rs
gkr_iop/src/gkr/layer/: linear_layer.rs  zerocheck_layer.rs
gkr_iop/src/precompiles/: faster_keccak.rs  keccak_f.rs  mod.rs  sequencer.rs  utils.rs
mpcs/: Cargo.toml
mpcs/src/: basefold.rs
mpcs/src/basefold/: commit_phase.rs  query_phase.rs  sumcheck.rs
mpcs/src/util/: merkle_tree.rs
mpcs/src/util/plonky2_util/: mod.rs
multilinear_extensions/src/: virtual_poly.rs  virtual_poly_v2.rs
sp1-precompiles-playground/lib/src/: lib.rs
sp1-precompiles-playground/program/: Cargo.toml
sp1-precompiles-playground/program/src/: main.rs
subprotocols/examples/: zerocheck_logup.rs
subprotocols/src/: sumcheck.rs  utils.rs  zerocheck.rs
subprotocols/src/expression/: evaluate.rs
sumcheck/: Cargo.toml
sumcheck/src/: prover_v2.rs  structs.rs
transcript/: Cargo.toml
transcript/src/: basic.rs
whir/: Cargo.toml
whir/src/: utils.rs
whir/src/ntt/: mod.rs  ntt_impl.rs  transpose.rs
whir/src/poly_utils/: coeffs.rs  fold.rs
whir/src/sumcheck/: prover_core.rs  prover_not_skipping.rs  prover_not_skipping_batched.rs  prover_single.rs
whir/src/whir/: committer.rs  fs_utils.rs  prover.rs
whir/src/whir/batch/: committer.rs  prover.rs
