[package]
categories.workspace = true
description = "GKR IOP protocol implementation"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "gkr_iop"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ark-std.workspace = true
ff.workspace = true
ff_ext.workspace = true
goldilocks.workspace = true
itertools.workspace = true
multilinear_extensions = { version = "0.1.0", path = "../multilinear_extensions" }
ndarray.workspace = true
rand.workspace = true
rayon.workspace = true
subprotocols.workspace = true
thiserror.workspace = true
transcript.workspace = true
tiny-keccak.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
harness = false
name = "keccak_f"