[package]
categories.workspace = true
description = "GKR IOP protocol implementation"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "gkr_iop"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ark-std.workspace = true
ff_ext = { path = "../ff_ext" }
itertools.workspace = true
multilinear_extensions = { version = "0.1.0", path = "../multilinear_extensions" }
p3-field.workspace = true
p3-goldilocks.workspace = true
ndarray.workspace = true
rand.workspace = true
rayon.workspace = true
subprotocols = { path = "../subprotocols" }
thiserror = "1"
transcript = { path = "../transcript" }
tiny-keccak.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
harness = false
name = "keccak_f"

[[bench]]
harness = false
name = "faster_keccak"
