[package]
categories.workspace = true
description = "Transcript generation for Ceno"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "transcript"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
crossbeam-channel.workspace = true
ff.workspace = true
ff_ext = { path = "../ff_ext" }
goldilocks.workspace = true
poseidon.workspace = true
serde.workspace = true

[dev-dependencies]
plonky2_field = { git = "ssh://git@github.com/0xPolygonZero/plonky2.git"}
plonky2 = { git = "ssh://git@github.com/0xPolygonZero/plonky2.git" }